# yfinance-stock-downloader

./: .gitignore  LICENSE  README.md  config.json  config_unified_symbols.json  main.py  pyproject.toml  requirements.txt  transform_crypto_data.py
.cursor/rules/: configuration-guide.mdc  data-sources-guide.mdc  project-overview.mdc  troubleshooting-guide.mdc
data/: IWB_holdings_250529.csv  etf_list.csv
documentation/: MIGRATION_GUIDE.md  QUICK_MIGRATION.md  maximum_historical_data_enhancement.md
scripts/: create_unified_schema.py  optimize_for_large_datasets.py  test_max_historical_download.py  test_symbol_validation.py  transform_data.py  unify_sources.py
src/: __init__.py  config.py  downloader.py  validators.py
tests/: __init__.py  test_downloader.py
tests/analysis/: review_csv_output.py
tests/test_data/: AAPL.csv  MSFT.csv  test_ticker.csv
